--- a/index.html
+++ b/index.html
@@ -1,14 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-
-<body>
-    <h1>Hello world</h1>
-    <p>Hello Dauren</p>
-</body>
+    <link rel="stylesheet" href="./styles/style.css">
+  </head>
+  <body>
+      <div class="Rap">
+        <div class="photo-1">
+          <img src="../1/pics/1.jpeg" alt="" />
+        </div>
+        <div class="photo-2">
+          <img src="../1/pics/2.jpeg" alt="" />
+        </div>
+        <div class="photo-3">
+          <img src="../1/pics/3.jpg" alt="" />
+        </div>
+        <div class="photo-4">
+          <img src="../1/pics/4.jpeg" alt="" />
+        </div>
+        <div class="photo-5">
+          <img src="../1/pics/5.jpg" alt="" />
+        </div>
+        <div class="photo-6">
+          <img src="../1/pics/6.jpeg" alt="" />
+        </div>
+        <div class="photo-7">
+          <img src="../1/pics/7.jpg" alt="" />
+        </div>
+        <div class="photo-8">
+          <img src="../1/pics/8.jpeg" alt="" />
+        </div>
+        <div class="photo-9">
+          <img src="../1/pics/9.jpg" alt="" />
+        </div>
+      </div>
+  </body>
 </html>
